WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
70092
[GTK]
r97438
: Inconsistent use of flattening vs flattering in function names/comments
https://bugs.webkit.org/show_bug.cgi?id=70092
Summary
[GTK] r97438: Inconsistent use of flattening vs flattering in function names/...
Priit Laes (IRC: plaes)
Reported
2011-10-14 00:02:05 PDT
Patch landed in
r97438
uses inconsistently both flattening and flattering (PROP_ENABLE_FRAME_FLATTERING) and giving a wild shot I guess the variant with 'r' is wrong.
Attachments
Property name correction.
(4.25 KB, patch)
2011-10-14 04:54 PDT
,
Nayan Kumar K
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Martin Robinson
Comment 1
2011-10-14 00:25:53 PDT
Thanks for catch that. Flattening is indeed the correct spelling.
Nayan Kumar K
Comment 2
2011-10-14 04:54:40 PDT
Created
attachment 110993
[details]
Property name correction. Thanks for this catch. Attached is the patch to correct the spelling as 'FLATTENING'.
WebKit Review Bot
Comment 3
2011-10-14 10:03:30 PDT
Comment on
attachment 110993
[details]
Property name correction. Clearing flags on attachment: 110993 Committed
r97474
: <
http://trac.webkit.org/changeset/97474
>
WebKit Review Bot
Comment 4
2011-10-14 10:03:35 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug