[GTK] r97438: Inconsistent use of flattening vs flattering in function names/comments https://bugs.webkit.org/show_bug.cgi?id=70092

Patch by Nayan Kumar K <nayankk@motorola.com> on 2011-10-14
Reviewed by Martin Robinson.

Fixes the miss-spelling of 'PROP_ENABLE_FRAME_FLATTENING' as 'PROP_ENABLE_FRAME_FLATTERING'
introduced with change set r97438.

* UIProcess/API/gtk/WebKitSettings.cpp:
(webKitSettingsSetProperty): Property name correction.
(webKitSettingsGetProperty): Property name correction.
(webkit_settings_class_init): Property name correction.
* UIProcess/API/gtk/tests/TestWebKitSettings.cpp:
(testWebKitSettings): Spelling correction.

Canonical link: https://commits.webkit.org/86203@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@97474 268f45cc-cd09-0410-ab3c-d52691b4dbfc